--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tarot Reader</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script defer src="./assets/script.js"></script>
 </head>
 
 <body>
+  <header>
+    <h1>Tarot Reader</h1>
+    <button id="random-card">Draw a card</button>
+    <form id="card-form">
+      <input type="text" name="card" placeholder="Search for a card" id="card-search" />
+      <button>Search</button>
+    </form>
+  </header>
+
+  <div id="card-data"></div>
 
 </body>
 
