added search form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="random-card">Draw a card</button>
     <form id="card-form">
       <input type="text" name="card" placeholder="Search for a card" id="card-search" />
-      <button>Search</button>
+      <button id="search-btn">Search</button>
     </form>
   </header>
 
