--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tarot Reader</title>
+  <link rel="icon"
+    href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/285/crystal-ball_1f52e.png"
+    type="image/x-icon">
+
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script defer src="./assets/script.js"></script>
+  <link rel="stylesheet" href="./assets/style.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <h1>Tarot Reader</h1>
-    <button id="random-card">Draw a card</button>
-    <form id="card-form">
-      <input type="text" name="card" placeholder="Search for a card" id="card-search" />
-      <button id="search-btn">Search</button>
-    </form>
+    <div class="card-functions">
+      <button id="random-card">Draw a card</button>
+      <form id="card-form">
+        <input type="text" name="card" placeholder="Search for a card" id="card-search" />
+        <button id="search-btn">Search</button>
+      </form>
+    </div>
   </header>
 
   <div id="card-data"></div>
