setup basic flexbox css

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </div>
   </header>
 
-  <div id="card-data"></div>
-  <div id="card-image">
-
+  <div class="flex-container">
+    <div class="flex-child" id="card-data"></div>
+    <div class="flex-child" id="card-image"></div>
   </div>
 
 </body>
