--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <script defer src="./assets/script.js"></script>
   <link rel="stylesheet" href="./assets/style.css">
 
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;1,200&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
