adding three card option, issues with function

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h1>Tarot Reader</h1>
     <div class="card-functions">
       <button id="random-card">Draw a card</button>
+      <button id="three-cards">Draw three cards</button>
       <form id="card-form">
         <input type="text" name="card" placeholder="Search for a card" id="card-search" />
         <button id="search-btn">Search</button>
