--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
   </header>
 
   <div class="flex-container">
-    <div class="flex-child" id="card-data"></div>
-    <div class="flex-child" id="card-image"></div>
+    <div class="card-container">
+      <div class="flex-child" id="card-data"></div>
+      <div class="flex-child" id="card-image"></div>
+    </div>
   </div>
 
 </body>
