--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <input type="text" name="card" placeholder="Search for a card" id="card-search" />
         <button id="search-btn">Search</button>
       </form>
+      <button id="view-starred">View starred cards</button>
+      <button id="add-star">Star</button>
     </div>
     <hr>
   </header>
