reverted to original css styling (no 3 card columns)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <script defer src="./assets/script.js"></script>
   <link rel="stylesheet" href="./assets/style.css">
 
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;1,200&display=swap"
     rel="stylesheet">
 
@@ -31,8 +30,8 @@
         <input type="text" name="card" placeholder="Search for a card" id="card-search" />
         <button id="search-btn">Search</button>
       </form>
-      <button id="view-starred">View starred cards</button>
-      <button id="add-star">Star</button>
+      <!-- <button id="view-starred">View starred cards</button>
+      <button id="add-star">Star</button> -->
     </div>
     <hr>
   </header>
