--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
   </header>
 
   <div class="flex-container">
-    <div class="flex-child" id="card-data"></div>
+    <div class="data-container">
+      <div class="flex-child" id="card-data"></div>
+    </div>
     <div class="flex-child" id="card-image"></div>
   </div>
 
