--- a/index.html
+++ b/index.html
@@ -36,10 +36,19 @@
     <hr>
   </header>
 
-  <div class="flex-container">
-    <div class="data-container">
-      <div class="flex-child" id="card-data"></div>
+  <!-- <div class="row">
+    <div class="column">
+      <img src="https://www.sacred-texts.com/tarot/pkt/img/ar01.jpg" alt="The Magician">
+      <img src="https://www.sacred-texts.com/tarot/pkt/img/ar02.jpg" alt="The High Priestess">
+      <img src="https://www.sacred-texts.com/tarot/pkt/img/ar03.jpg" alt="The Empress">
+
     </div>
+  </div> -->
+
+
+
+  <div class="flex-container">
+    <div class="flex-child" id="card-data"></div>
     <div class="flex-child" id="card-image"></div>
   </div>
 
